# presto-deck

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  README_IMPLEMENTATION.md  alembic.ini  app.py  docker-compose.dev.yml  docker-compose.yml  htmx_example.md  instruction.md  langchain_invoke_example.md  llm_cache.db  main.py  pyproject.toml  requirements.txt  what_is_good_system.md  worker.py
.claude/: settings.local.json
.github/workflow/: main.yml
.github/workflows/: main.yml
alembic/: env.py
app/: main.py
app/adapters/: __init__.py
app/api/: schemas.py  websocket.py
app/application/: services.py  tasks.py
app/core/: add.py  concurrency.py  config.py  content_writer.py  dependencies.py  edit.py  layout_selector.py  llm.py  logging.py  logging_config.py  observability.py  planner.py  prompts.py  security.py  slide_worker.py  state.py  streaming.py  template_manager.py
app/domain/: entities.py  exceptions.py  repositories.py
app/infrastructure/: container.py
app/models/: context.py  schema.py  types.py
app/ports/: __init__.py
app/services/: __init__.py
app/templates/: catalog.json  comparison_slide.html  concept_definition_card.html  data_chart_placeholder.html  feature_showcase_3_column.html  problem_solution_split.html  process_flow_diagram.html  team_member_profile.html  testimonial_carousel_single.html  timeline_event_list.html  two_column.html
asset/: call_to_action_full_width.html  key_takeaways.html  q_and_a_slide.html  title.html
asset/sample1/: 1.html  2.html  3.html
asset/sample2/: 1.html
asset/sample3/: 1.html
backend/: Makefile  TEMPLATE_SELECTION_UPGRADE.md  init_db.py  llm_cache.db  presto_deck.db  pytest.ini
backend/alembic/: env.py
backend/app/: main.py  worker.py
backend/tests/: conftest.py
frontend/: app.js  editor.html  index.html  output.css  package-lock.json  package.json  style.css  tailwind.config.js
frontend/js/: alpine.js  config.js  decks.js  editor.js  events.js  modal.js  planflow.js  slides.js  stream.js
frontend/src/: App.jsx
presto/: llm.py  models.py  pipeline.py  prompt.py
presto/app/: main.py
presto/prompts/: content_prompt.txt  outline_prompt.txt  research_and_enrichment_prompt.txt
presto/templates/: .template_cache.json  comparison_slide.html  comparison_table_2_item.html  content_slide.html  icon_grid_4x4.html  key_statistic_highlight.html  map_location_highlight.html  metadata.json  sample1_3_0.html  section_header.html  title_slide.html
presto/tests/: conftest.py  test_presentation_service.py  test_presentation_service_mock_llm.py  test_unit_generate.py
scripts/: build_templates.py
templates/: content_slide.html  image_caption.html  quote_with_attribution.html
tests/: README.md  conftest.py
tests/_helpers/: fakes.py
tests/api/: test_modular_endpoints.py  test_presentation_api.py  test_streaming_api.py  test_system_api.py  test_ui_edit_versioning.py
tests/core/: test_content_writer.py  test_layout_selector.py  test_planner.py
tests/e2e/: test_deck_generation_workflow.py
tests/integration/: test_api_endpoints.py  test_database.py  test_redis.py
tests/unit/: test_api_decks.py  test_application_services.py  test_websocket.py  (+4 more)
web/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
(+222 files in other folders)
