[project]
name = "presto-deck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgi-lifespan>=2.1.0",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.31",
    "litellm>=1.76.0",
    "openai>=1.101.0",
    "pre-commit>=4.3.0",
    "prometheus-client>=0.22.1",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.10",
    "streamlit>=1.48.1",
    "uvicorn[standard]>=0.35.0",
]
